oshk/cota-wp/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: cota-wordpress
  labels:
    owner: cota
    app: wordpress
spec:
  template:
    metadata:
      labels:
        owner: cota
        app: wordpress
    spec:
      imagePullSecrets:
        - name: azr
      volumes:
        - name: upload
          azureFile:
            secretName: cotablob-file
            shareName: cota-wordpress
            readOnly: false
      containers:
        - name: wordpress
          image: hkcota.azurecr.io/cota/wordpress:2.1.8
          livenessProbe:
            tcpSocket:
              port: service
            timeoutSeconds: 1
          volumeMounts:
            - name: upload
              mountPath: /var/www/html/wp-content/uploads
          ports:
            - containerPort: 80
              name: service
