oshk/cota-wp/nginx-config.yaml
kind: Service
apiVersion: v1
metadata:
  name: cota-nginx
  labels:
    owner: cota
    app: nginx
spec:
  selector:
    owner: cota
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: cota-nginx
  labels:
    owner: cota
    app: nginx
spec:
  selector:
    matchLabels:
      owner: cota
      app: nginx
  template:
    metadata:
      labels:
        owner: cota
        app: nginx
    spec:
      volumes:
        - name: upload
          azureFile:
            secretName: cotablob-file
            shareName: cota-wordpress
            readOnly: true
        - name: config
          configMap:
            name: cota-nginx
            items:
              - key: nginx.conf
                path: nginx.conf
      containers:
        - name: nginx
          image: nginx:1.13-alpine
          command: ["nginx", "-c", "/nginx/nginx.conf", "-g", "daemon off;"]
          readinessProbe:
            tcpSocket:
              port: service
            timeoutSeconds: 1
          volumeMounts:
            - name: upload
              mountPath: /usr/share/nginx/html/wp-content/uploads
            - name: config
              mountPath: /nginx
          ports:
            - containerPort: 80
              name: service
