oshk/cota-wp/service.yml
kind: Service
apiVersion: v1
metadata:
  name: cota-wordpress
  labels:
    owner: cota
    app: wordpress
spec:
  selector:
    owner: cota
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
